fixed styling bug
invisible elements have to be pushed out to the left to avoid widening
the page

--- a/public/stylesheets/iqvoc/iqvoc.css
+++ b/public/stylesheets/iqvoc/iqvoc.css
@@ -117,7 +117,7 @@ div.pagination span.current { background-color: #FEFBDC; border-color: #F3AC40; 
 
 .menu li ul {
   position: absolute;
-  right: -999em;
+  left: -999em;
   background-color: #EEE;
 }
 
